src/main/java/com/example/timski/model/errors/ProductAlreadyInShoppingCart.java
package com.example.timski.model.errors;

import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ResponseStatus;

@ResponseStatus(HttpStatus.PRECONDITION_FAILED)
public class ProductAlreadyInShoppingCart extends RuntimeException{
    public ProductAlreadyInShoppingCart(Long productId, String username) {
        super(String.format("Proizvodot so %d id e vekje dodaden vo koshnichkata za korisnikot so %s username", productId, username));
    }
}
